tests/trybuild/stages/system_no_colon.stderr
error: no rules expected the token `,`
 --> tests/trybuild/stages/system_no_colon.rs:4:11
  |
4 |     system,
  |           ^ no rules expected this token in macro call
