tests/trybuild/stages/system_no_colon.rs
use brood::system::schedule::stages;

type Stages = stages!{
    system,
};

fn main() {}
